--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,16 +1,25 @@
-site_name: decodedataio
+# Project information
+site_name: DecodeDataIO
 site_url: https://decodedataio.github.io/
-#docs_dir: 'docs'  
+site_author: Jim & Nacho
+site_description: Decode GA4 data in BigQuery, high performance, easy to learn, ready for production
 
+# Repository
+repo_name: decodedataio/decodedataio.github.io
+repo_url: https://github.com/decodedataio/decodedataio.github.io
+
+# Copyright
+copyright: Copyright &copy; 2023 Transformationflow OÜ (16248096), Estonia
+
+# Configuration
 theme:
   name: material
-  custom_dir: overrides
+  custom_dir: decodedata/overrides
   font:
     text: Monserrat
-  
+    code: Roboto Mono
   logo: assets/DecodeDataLogo_106x106.png
   favicon: assets/DecodeDataLogo_48x48.png
-  
   features:
     #  **** Setting up navigation ****
     #- navigation.instant
@@ -27,16 +36,14 @@ theme:
     # **** Setting up navigation ****
     - search.highlight
 
+    # **** Announcement bar ****
     #- header.autohide
-    - announce.dismiss
+    #- announce.dismiss
 
     - content.code.annotate
     - content.code.copy
-
   language: en
-
   direction: ltr
-
   palette:
     - scheme: default
       toggle:
@@ -50,7 +57,10 @@ theme:
         name: Switch to light mode    
       primary: custom
       accent: cyan
-      
+  icon:
+    repo: fontawesome/brands/github-alt
+
+# Plugins
 plugins:
   - search
   #- meta
@@ -70,19 +80,23 @@ plugins:
             Home: Inicio
             Reference: Referencia
             Setup: Configuración
-            Grid: Grilla
-            Social Cards: Tarjatas sociales
 
-nav:
-  - Home: index.md
-  - Reference:
-    - Grid: reference/grid.md
-  - Setup:
-    - Social Cards: setup/social_cards.md
-  #- Blog: 
-  #  - blog/index.md
-  
+# Additional configuration
+extra:
+  social:
+    - icon: fontawesome/brands/medium
+      link: https://jim-barlow.medium.com/
+    - icon: fontawesome/brands/github
+      link: https://github.com/decodedataio
+  #homepage: https://example.com
+
+extra_css:
+  - assets/stylesheets/extra.css
+
+
+# Extensions
 markdown_extensions: 
+  # Grid
   - attr_list
   - md_in_html
 
@@ -110,27 +124,16 @@ markdown_extensions:
   - pymdownx.tabbed:
       alternate_style: true
 
-
-extra_css:
-  - assets/stylesheets/extra.css
-
-
-extra:
-  social:
-    - icon: fontawesome/brands/medium
-      link: https://jim-barlow.medium.com/
-    - icon: fontawesome/brands/github
-      link: https://github.com/decodedataio
-
-
-  #alternate:
-  #  - name: en - English
-  #    link: /en/ 
-  #    lang: en
-  #  - name: es - Spanish
-  #    link: /es/
-  #    lang: es
-
-copyright: Copyright &copy; 2023 Transformationflow OÜ (16248096), Estonia
+# Page tree
+nav:
+  - Home: index.md
+  - Decodedata: decodedata/index.md
+  - Reference: 
+    - Reference: reference/index.md
+    - Setup: reference/setup/setup.md
+  - Setup:
+    - Setup: setup/setup.md
+  #- Blog: 
+  #  - blog/index.md
   
 
