--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 mkdocs-static-i18n[material]
-mkdocs-material
-mkdocs-material-extensions
-pillow 
-cairosvg
-#[imaging]
+mkdocs-material-extensions~=1.2
+mkdocs-material[imaging]
+#mkdocs-material
+#mkdocs
