Code block examples

--- a/docs/templates/manifest.json
+++ b/docs/templates/manifest.json
@@ -13,5 +13,9 @@
   "social/es/decodedata/articles/articles.png": "8b8bef023353b20dfc5b138bbe722fd7e6585ee6",
   "social/articles/index.png": "3ca44cf27f28f047708522da63404ea65f7730d6",
   "social/es/articles/index.png": "3be8368c63df1fae52ad22f6dff0a8def1d4c0e1",
-  "social/es/articles/articles.png": "8b8bef023353b20dfc5b138bbe722fd7e6585ee6"
+  "social/es/articles/articles.png": "8b8bef023353b20dfc5b138bbe722fd7e6585ee6",
+  "social/decodedata/includes/abbreviations.png": "454bc26425b165501d24a329177e9fd8066374f5",
+  "social/es/decodedata/includes/abbreviations.png": "454bc26425b165501d24a329177e9fd8066374f5",
+  "social/decodedata/code-blocks.png": "54f8a67d41e2a8bf3d47f321f4e148f52e10623c",
+  "social/es/decodedata/code-blocks.png": "54f8a67d41e2a8bf3d47f321f4e148f52e10623c"
 }
