--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,14 +54,14 @@ theme:
       toggle:
         icon: material/toggle-switch-off-outline 
         name: Switch to dark mode
-      primary: teal
-      accent:  cyan 
+      primary: custom
+      accent:  custom
     - scheme: slate 
       toggle:
         icon: material/toggle-switch
         name: Switch to light mode    
-      primary: teal
-      accent: cyan
+      primary: custom
+      accent: custom 
   icon:
     repo: fontawesome/brands/github
 
@@ -161,5 +161,5 @@ not_in_nav: |
   /blog/index.md
   /blog/index.es.md
   /blog/posts/index.md
-
+  /products.md
 
